Fix: added tags to deploy cloud run commands in yml (+ added button styling to make change visible)

--- a/api/static/styles/style.css
+++ b/api/static/styles/style.css
@@ -5,6 +5,29 @@ body {
     background-color: #f4f4f4;
 }
 
+.button {
+    display: inline-block;
+    padding: 10px 15px;
+    margin: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #4CAF50;
+    border: none;
+    border-radius: 15px;
+  }
+
+  .button:hover {background-color: #3e8e41}
+
+  .button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
+
 .navbar {
     background-color: #333;
     overflow: hidden;
